--- a/client/src/pages/HomePage/Home.module.css
+++ b/client/src/pages/HomePage/Home.module.css
@@ -2,6 +2,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 20px;
-  min-height: calc(100vh - 200px);
+  width: 100%;
+  height: 100%;
 }
